5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1785_1602.log
== TEST (2019-05-30 11:17:53) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]<v[ins]):
		ins = ins +1
	i = i + 1
	
print(min(ins))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:19:12) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]<v[ins]):
		ins = ins +1
	i = i + 1
	
print((ins))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:20:58) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]<v[ins]):
	i = i + 1
print(min(v[ins])
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:21:07) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]<v[ins]):
		i = i + 1
print(min(v[ins])
-- ERROR:
File "XXXX", line 9
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:21:17) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]<v[ins]):
		i = i + 1
print(min(v[i])
-- ERROR:
File "XXXX", line 9
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:21:31) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]<v[ins]):
		i = i + 1
print(min(v[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:22:51) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]<v[ins]):
		ins = ins + 1
	i = i + 1
print(min(v[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:00) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]<v[ins]):
		ins = ins + 1
		i = i + 1
print(min(v[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:10) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]<v[ins]):
		ins = ins + 1
		i = i + 1
print(min(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:24:29) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]<v[ins]):
		ins = ins + 1
		i = 1+1
	else:
		i = i + 1
print(ins)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:26:47) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]>v[ins]):
		ins = ins + 1
		i = 1+1
	else:
		i = i + 1
print(min(i))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:44) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]>v[ins]):
		ins = ins + 1
		i = 1+1
	else:
		i = i + 1
print(v[ins])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:55) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]>v[ins]):
		ins = ins + 1
		i = i+1
	else:
		i = i + 1
print(v[ins])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:28:45) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]>v[ins]):
		ins = ins + 1
		i = i+1
	else:
		i = i + 1
print(ins)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:28:48) 
-- CODE:
from numpy import*
v = array(eval(input("digite os tempos: ")))
i = 0
ins = 0
while(i<size(v)):
	if(v[i]>v[ins]):
		ins = ins + 1
		i = i+1
	else:
		i = i + 1
print(ins)
-- EXECUTION TIME:
0.535417
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
